[package]
name = "agent-resume"
version = "0.1.0"
edition = "2021"
description = "Checkpoint and resume long-running agent jobs from the last completed item"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-resume-rs"
keywords = ["agent", "checkpoint", "resume", "llm", "workflow"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
